# litterae

./: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.local  Cargo.toml  Claude.md  Dockerfile  LICENSE  README.md  SECURITY.md  decisions.susu  docker-compose.override.yml  docker-compose.yml  expectations.susu  litterae.example.toml
.susumu/: check.json  project.susu
crates/admin/: Cargo.toml
crates/admin/src/: handlers.rs  lib.rs  router.rs  session.rs  store.rs  types.rs
crates/admin/tests/: end_to_end.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs  store.rs  types.rs
crates/auth/: Cargo.toml
crates/auth/src/: account.rs  lib.rs  store.rs
crates/common/: Cargo.toml
crates/common/src/: changes.rs  config.rs  error.rs  header.rs  input.rs  lib.rs  throttle.rs  tls.rs  tracing_init.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  amk.rs  committing.rs  error.rs  hpke_seal.rs  kdf.rs  keyed_hash.rs  keys.rs  lib.rs  rand_key.rs  sign.rs
crates/delivery/: Cargo.toml
crates/delivery/src/: lib.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs
crates/jmap/: Cargo.toml
crates/jmap/src/: api.rs  compose.rs  compose_html.rs  content_disposition.rs  email.rs  handlers.rs  html_sanitize.rs  lib.rs  router.rs  search.rs  session_store.rs  types.rs
crates/jmap/tests/: compose.rs  end_to_end.rs  phase4.rs
crates/queue/: Cargo.toml
crates/queue/src/: backoff.rs  classify.rs  dkim.rs  dsn.rs  enqueue.rs  lib.rs  query.rs  schema.rs  types.rs  worker.rs
crates/scan/: Cargo.toml
crates/scan/src/: clamav.rs  endpoint.rs  lib.rs  rspamd.rs
crates/scan/tests/: clamav_protocol.rs  orchestration.rs  rspamd_protocol.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  serve.rs
crates/smtp-in/: Cargo.toml
crates/smtp-in/src/: lib.rs  server.rs  session.rs  tls.rs
crates/smtp-in/tests/: end_to_end.rs
crates/store/: Cargo.toml
crates/store/src/: blob.rs  lib.rs  mailboxes.rs  messages.rs  metadata.rs  threads.rs  uploads.rs
crates/submission/: Cargo.toml
crates/submission/src/: lib.rs  server.rs  session.rs  tls.rs
crates/submission/tests/: end_to_end.rs
crowdsec/: Dockerfile  README.md  acquis.yaml
crowdsec/parsers/s01-parse/: litterae.yaml
crowdsec/scenarios/: litterae-bruteforce.yaml
docker/: entrypoint.sh  litterae.toml.template
web/: .env.example  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
web/src/lib/: AdminSidebar.svelte  Compose.svelte  Dialog.svelte  LinkConfirmDialog.svelte  MailBodyFrame.svelte  MailSidebar.svelte  RichTextEditor.svelte  ThemeToggle.svelte  admin.ts  adminSession.svelte.ts  composeState.svelte.ts  jmap.ts  mailBodyFrame.ts  mailNav.svelte.ts  session.svelte.ts  theme.svelte.ts
web/src/routes/: +layout.ts  +page.svelte  layout.css
web/src/routes/console/: +layout.svelte  +page.svelte
web/src/routes/console/accounts/: +page.svelte
web/src/routes/console/change-password/: +page.svelte
web/src/routes/console/domains/: +page.svelte
web/src/routes/console/logs/: +page.svelte
web/src/routes/console/queue/: +page.svelte
web/src/routes/mail/: +layout.svelte  +page.svelte
web/src/routes/mail/[id]/: +page.svelte
web/src/routes/mail/settings/: +page.svelte
