[package]
name = "admin"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
common.workspace = true
crypto.workspace = true
audit.workspace = true
auth.workspace = true
queue.workspace = true
store.workspace = true
dns.workspace = true
rusqlite.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
hex.workspace = true
time.workspace = true
subtle = "2.6.1"

[dev-dependencies]
tower.workspace = true
tempfile = "3.27.0"
