[package]
name = "common"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
toml.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
